# stock-market-ai

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile.app  FRONTEND_REDESIGN.md  PHASES.md  SYSTEM_DESIGN.md  docker-compose.yml  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: a1b2c3d4e5f6_initial_migration.py  b2c3d4e5f6a7_add_alerts_table.py  c3d4e5f6a7b8_india_adaptation.py  d4e5f6a7b8c9_add_buy_date_to_trades.py
app/: celery_app.py  config.py  exceptions.py  logging_config.py  main.py
app/agents/: execution_agent.py  orchestrator.py  quant_agent.py  research_agent.py  risk_agent.py  scheduled_tasks.py
app/api/routes/: __init__.py  analysis.py  audit.py  fii_dii_route.py  health_apis.py  market_overview.py  news.py  portfolio.py  runs.py  search.py  (+4 more)
app/db/: __init__.py  audit.py
app/models/: __init__.py  agent.py  market.py  trading.py
app/schemas/: analysis.py  health.py  portfolio.py  signals.py  trades.py
app/tools/: alpaca_client.py  angel_client.py  broker.py  broker_errors.py  bse_nse_fetcher.py  cache.py  edgar_fetcher.py  embedder.py  fii_dii.py  indicators.py  llm.py  market_calendar.py  news_fetcher.py  paper_broker.py  portfolio_tracker.py  price_fetcher.py  rag.py  rate_limiter.py  tax_calculator.py  upstox_client.py
app/utils/: formatting.py
app/workers/: dlq_consumer.py
frontend/: nginx.conf  package-lock.json  package.json
frontend/src/: App.tsx  index.css  main.tsx
memory/: MEMORY.md  project_stock_market_ai.md
tests/: test_orchestrator.py  test_price_fetcher.py  test_signal_to_order.py
(+20 files in other folders)
